--- a/TabsHolder/AddTabWindow.xaml
+++ b/TabsHolder/AddTabWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TabsHolder"
         mc:Ignorable="d"
-        Title="Please add new tab" Height="300" Width="700">
+        Title="Please add new tab" Height="300" Width="700"
+        Closing="AddTabWindow_Closing">
     <Window.Resources>
         <Style x:Key="Button" >
             <Setter Property="Button.FontSize" Value="14"/>
@@ -14,15 +15,15 @@
             <Setter Property="Button.Margin" Value="10,20,10,0" />
         </Style>
     </Window.Resources>
-    <StackPanel Orientation="Vertical">
+    <StackPanel Orientation="Vertical" DataContext="{Binding Source={StaticResource addTabWinViewModel}}">
         <StackPanel Orientation="Vertical" Margin="20,10,20,0">
             <TextBlock Margin="0,20,0,0">Insert URL below:</TextBlock>
-            <TextBox Width="600" Margin="0,0,0,0" HorizontalAlignment="Left"></TextBox>
+            <TextBox x:Name="urlInput" Width="600" Margin="0,0,0,0" HorizontalAlignment="Left" Text="{Binding Url}"></TextBox>
             <TextBlock Margin="0,20,0,0">Rate Me :):</TextBlock>
-            <TextBox Width="600" HorizontalAlignment="Left"></TextBox>
+            <TextBox x:Name="ratingInput" Width="600" HorizontalAlignment="Left" Text="{Binding Title}"></TextBox>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Margin="0,60,55,0" HorizontalAlignment="Right">
-            <Button Name="AddBtn" Style="{StaticResource Button}" >Add</Button>
+            <Button Name="AddBtn" Style="{StaticResource Button}" Click="AddBtn_Click" >Add</Button>
             <Button Name="DeleteBtn" Style="{StaticResource Button}">Delete</Button>
         </StackPanel>
     </StackPanel>
