--- a/TabsHolder/MainWindow.xaml
+++ b/TabsHolder/MainWindow.xaml
@@ -13,19 +13,17 @@
             <Setter Property="TextBlock.Width" Value="300"/>
             <Setter Property="TextBlock.HorizontalAlignment" Value="Left"/>
         </Style>
-
         <Style x:Key="Button" >
             <Setter Property="Button.FontSize" Value="14"/>
             <Setter Property="Button.Width" Value="60"/>
             <Setter Property="Button.Height" Value="25"/>
             <Setter Property="Button.Margin" Value="0,20,0,0" />
         </Style>
-
     </Window.Resources>
-    <StackPanel x:Name="ParentElem" Orientation="Vertical" >
+    <StackPanel x:Name="ParentElem" Orientation="Vertical">
         <TextBlock Style="{StaticResource Title}">TABS HOLDER</TextBlock>
         <StackPanel Orientation="Horizontal" VerticalAlignment="Top">
-            <DataGrid ItemsSource="{Binding TabItems}" AutoGenerateColumns="False" Margin="85,0" HorizontalAlignment="Left"
+            <DataGrid x:Name="tabItemsList"  ItemsSource="{Binding TabItems}" AutoGenerateColumns="False" Margin="85,0" HorizontalAlignment="Left"
                   Width="710" Height="560" >
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Title" Width="600" Binding="{Binding Path=Title}" FontSize="14" />
@@ -34,8 +32,8 @@
                 
             </DataGrid>
             <StackPanel Orientation="Vertical">
-                <Button Name="AddBtn" Style="{StaticResource Button}" >Add</Button>
-                <Button Name="DeleteBtn" Style="{StaticResource Button}">Delete</Button>
+                <Button Name="AddBtn" Style="{StaticResource Button}" Click="AddBtn_Click" >Add</Button>
+                <Button Name="DeleteBtn" Style="{StaticResource Button}" Click="DeleteBtn_Click">Delete</Button>
             </StackPanel>
         </StackPanel>
 
