--- a/TabsHolder/View/AddTabWindow.xaml
+++ b/TabsHolder/View/AddTabWindow.xaml
@@ -15,7 +15,7 @@
             <Setter Property="Button.Margin" Value="10,20,10,0" />
         </Style>
     </Window.Resources>
-    <StackPanel Orientation="Vertical" DataContext="{Binding Source={StaticResource addTabWinViewModel}}">
+    <StackPanel Orientation="Vertical">
         <StackPanel Orientation="Vertical" Margin="20,10,20,0">
             <TextBlock Margin="0,20,0,0">Insert URL below:</TextBlock>
             <TextBox x:Name="urlInput" Width="600" Margin="0,0,0,0" HorizontalAlignment="Left" Text="{Binding Url}"></TextBox>
