--- a/TabsHolder/View/MainWindow.xaml
+++ b/TabsHolder/View/MainWindow.xaml
@@ -28,7 +28,7 @@
         </StackPanel>
     <StackPanel Orientation="Horizontal" VerticalAlignment="Top">
             <DataGrid x:Name="tabItemsList"  ItemsSource="{Binding TabItems, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" AutoGenerateColumns="False" Margin="85,0" HorizontalAlignment="Left"
-                  Width="737" Height="560" CanUserAddRows="False">
+                  Width="737" Height="560" CanUserAddRows="False" SelectedItem="{Binding SelectedItem}">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Title" Width="620" Binding="{Binding Path=Title}" FontSize="14" />
                     <DataGridTextColumn Header="Rating" Width="50" Binding="{Binding Path=Rating}" FontSize="14"/>
@@ -46,8 +46,8 @@
             </DataGrid>
             <StackPanel Orientation="Vertical">
                 <Button Name="AddBtn" Style="{StaticResource Button}" Click="AddBtn_Click" >Add</Button>
-                <Button Name="DeleteBtn" Style="{StaticResource Button}" Click="DeleteBtn_Click">Delete</Button>
-                <Button Name="Open" Style="{StaticResource Button}" Margin="0,100,0,0" Click="Open_Click">Open</Button>
+                <Button Name="DeleteBtn" Style="{StaticResource Button}" Command="{Binding DeleteTabItemCmd}" >Delete</Button>
+                <Button Name="Open" Style="{StaticResource Button}" Margin="0,100,0,0" Command="{Binding OpenInFirefoxCmd}" >Open</Button>
             </StackPanel>
         </StackPanel>
 
