--- a/TabsHolder/View/MainWindow.xaml
+++ b/TabsHolder/View/MainWindow.xaml
@@ -5,13 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TabsHolder"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="1000" Background="DarkGray">
+        Title="MainWindow" Height="800" Width="1000" Background="#272822"
+        WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <Style x:Key="Title" >
             <Setter Property="TextBlock.FontSize" Value="32"/>
-            <Setter Property="TextBlock.Margin" Value="85,0,0,10"/>
+            <Setter Property="TextBlock.Margin" Value="85,20,0,10"/>
             <Setter Property="TextBlock.Width" Value="300"/>
             <Setter Property="TextBlock.HorizontalAlignment" Value="Left"/>
+            <Setter Property="TextBlock.Foreground" Value="#66d9ef"/>
+            <Setter Property="TextBlock.FontWeight" Value="DemiBold"/>
         </Style>
         <Style x:Key="Button" >
             <Setter Property="Button.FontSize" Value="14"/>
@@ -21,6 +24,15 @@
         </Style>
     </Window.Resources>
     <StackPanel x:Name="ParentElem" Orientation="Vertical">
+        <Menu>
+            <MenuItem Header="File">
+                <MenuItem Header="Open"/>
+                <MenuItem Header="Save As.."/>
+            </MenuItem>
+            <MenuItem Header="Help">
+                <MenuItem Header="About"/>
+            </MenuItem>
+        </Menu>
         <TextBlock Style="{StaticResource Title}">TABS HOLDER</TextBlock>
         <StackPanel Orientation="Horizontal">
             <TextBox Margin="85,0,0,20" Width="500" HorizontalAlignment="Left"  Text="{Binding Path=FilterWord, Mode=OneWayToSource, UpdateSourceTrigger=PropertyChanged}"/>
