--- a/TabsHolder/View/MainWindow.xaml
+++ b/TabsHolder/View/MainWindow.xaml
@@ -6,7 +6,9 @@
         xmlns:local="clr-namespace:TabsHolder"
         mc:Ignorable="d"
         Title="MainWindow" Height="700" Width="1000" Background="#272822"
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen"
+        
+        Closing="ClosingFromRightCorner">
     <Window.Resources>
         <Style x:Key="Title" >
             <Setter Property="TextBlock.FontSize" Value="32"/>
