--- a/TabsHolder/View/MainWindow.xaml
+++ b/TabsHolder/View/MainWindow.xaml
@@ -7,8 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="700" Width="1000" Background="#272822"
         WindowStartupLocation="CenterScreen"
-        
-        Closing="ClosingFromRightCorner">
+        Closing="BeforeClosingActions"
+        Loaded="MainWindow_Loaded">
     <Window.Resources>
         <Style x:Key="Title" >
             <Setter Property="TextBlock.FontSize" Value="32"/>
@@ -28,10 +28,10 @@
     <StackPanel x:Name="ParentElem" Orientation="Vertical">
         <Menu>
             <MenuItem Header="File">
-                <MenuItem Header="Load" Command="{Binding LoadLastSessionCmd}"/>
-                <MenuItem Header="Save" Command="{Binding SaveSessionCmd}"/>
+                <MenuItem Header="Load Session" />
+                <MenuItem Header="Save Session" Command="{Binding SaveSessionCmd}"/>
                 <Separator/>
-                <MenuItem Header="Exit" Command="{Binding ExitCmd}" />
+                <MenuItem Header="Exit" Click="MainWindowClose" />
             </MenuItem>
             <MenuItem Header="Help">
                 <MenuItem Header="About" Command="{Binding OpenAboutWindowCmd}"/>
