--- a/TabsHolder/View/MainWindow.xaml
+++ b/TabsHolder/View/MainWindow.xaml
@@ -28,6 +28,7 @@
     <StackPanel x:Name="ParentElem" Orientation="Vertical">
         <Menu>
             <MenuItem Header="File">
+                <MenuItem Header="New" Click="CreateSession_Click" />
                 <MenuItem Header="Load Session" Click="LoadSession_Click" />
                 <MenuItem Header="Save Session" Click="SaveSessionAs_Click"/>
                 <MenuItem Header="Overwrite Session" Command="{Binding OverwriteSessionCmd}" />
