--- a/Installer/MainWindow.xaml
+++ b/Installer/MainWindow.xaml
@@ -26,14 +26,14 @@
     <StackPanel Orientation="Vertical">
         <StackPanel Orientation="Vertical" Margin="20">
             <StackPanel Orientation="Horizontal" Margin="0,0,0,20">
-                <TextBox Width="660" Height="20" Margin="0,0,20,0">
+                <TextBox Width="660" Height="20" Margin="0,0,20,0" Text="{Binding OutputFolder, Mode=TwoWay}">
                 </TextBox>
                 <Button Style="{StaticResource Button}" Margin="0,0,0,0" Content="Browse" >
                     
                 </Button>
             </StackPanel>
 
-            <ComboBox ItemsSource="{Binding Path=Builds}">
+            <ComboBox ItemsSource="{Binding Path=Builds}" SelectedItem="{Binding SelectedItem, Mode=TwoWay}">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal">
@@ -54,7 +54,7 @@
             <TextBlock Style="{StaticResource ComboItem}">Complete</TextBlock>
         </StackPanel>
         <StackPanel Style="{StaticResource BottomButtonsContainer}">
-            <Button Style="{StaticResource Button}" Content="OK" Command="{Binding RunInstallationCmd}"/>
+            <Button Style="{StaticResource Button}" Content="OK" Command="{Binding RunInstallationCmd}" Click="Button_Click"/>
             <Button Style="{StaticResource Button}" Content="Cancel" Command="{Binding QuitCmd}"/>
         </StackPanel>
     </StackPanel>
