--- a/Installer/MainWindow.xaml
+++ b/Installer/MainWindow.xaml
@@ -26,7 +26,14 @@
     <StackPanel Orientation="Vertical">
         <StackPanel Orientation="Vertical" Margin="20">
             <StackPanel Orientation="Horizontal" Margin="0,0,0,20">
-                <TextBox Width="660" Height="20" Margin="0,0,20,0" Text="{Binding OutputFolder, Mode=TwoWay}">
+                <TextBox Width="660" Height="20" Margin="0,0,20,0">
+                    <TextBox.Text>
+                        <Binding Path="OutputFolder" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged">
+                            <Binding.ValidationRules>
+                                <DataErrorValidationRule />
+                            </Binding.ValidationRules>
+                        </Binding>
+                    </TextBox.Text>
                 </TextBox>
                 <Button Style="{StaticResource Button}" Margin="0,0,0,0" Content="Browse" >
                     
