1. Add tab win autoclosing when item is added. 2. Not show RecentlyUsedWin if there was not session

--- a/TabsHolder/View/RecentlyUsed.xaml
+++ b/TabsHolder/View/RecentlyUsed.xaml
@@ -19,7 +19,7 @@
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel  MouseDown="MouseDoubleClickHandler">
-                            <TextBlock Text="{Binding Name}"/>
+                            <TextBlock Text="{Binding Name}" FontSize="14"/>
                         </StackPanel>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
