--- a/TabsHolder/View/MainWindow.xaml
+++ b/TabsHolder/View/MainWindow.xaml
@@ -38,6 +38,9 @@
                 <Separator/>
                 <MenuItem Header="Exit" Click="MainWindowClose" />
             </MenuItem>
+            <MenuItem Header="Tools">
+                <MenuItem Header="Settings" Command="{Binding OpenSettingsWindowCmd}"/>
+            </MenuItem>
             <MenuItem Header="Help">
                 <MenuItem Header="About" Command="{Binding OpenAboutWindowCmd}"/>
             </MenuItem>
