--- a/TabsHolder/View/AboutWindow.xaml
+++ b/TabsHolder/View/AboutWindow.xaml
@@ -5,38 +5,42 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TabsHolder.View"
         mc:Ignorable="d"
-        Title="About" Height="437.183" Width="870.562" Background="#272822"
+        Title="About" Height="301.213" Width="870.562" Background="#272822"
         WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <Style x:Key="TextBlock" >
-            <Setter Property="TextBlock.FontSize" Value="20"/>
+            <Setter Property="TextBlock.FontSize" Value="14"/>
             <Setter Property="TextBlock.HorizontalAlignment" Value="Left"/>
             <Setter Property="TextBlock.Foreground" Value="#f8f8f2"/>
         </Style>
 
     </Window.Resources>
-    
-    <Grid>
-        <StackPanel>
-            <TextBlock Style="{StaticResource TextBlock}" Width="600" FontSize="30" Margin="100,40,0,0"> Keep favorite tabs near to you :)</TextBlock>
 
-            <StackPanel>
-                <Grid Margin="100, 80" HorizontalAlignment="Left" VerticalAlignment="Top">
+    <Grid Margin="0,0,0,11">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="91*"/>
+            <ColumnDefinition Width="772*"/>
+        </Grid.ColumnDefinitions>
+        <StackPanel Margin="0,0,0,67" Grid.ColumnSpan="2">
+            <TextBlock Style="{StaticResource TextBlock}" Width="600" FontSize="24" Margin="100,40,0,0"> Keep favorite tabs near to you :)</TextBlock>
+
+            <StackPanel Height="199">
+                <Grid Margin="100,40,0,50" HorizontalAlignment="Left" VerticalAlignment="Top" Height="137">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition MinWidth="80"/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="100"/>
-                        <RowDefinition Height="50"/>
-                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="65"/>
+                        <RowDefinition Height="37"/>
+                        <RowDefinition Height="98"/>
                     </Grid.RowDefinitions>
-                    <TextBlock Style="{StaticResource TextBlock}"  Grid.Row="0" Grid.Column="0" Grid.RowSpan="2">version:</TextBlock>
-                    <TextBlock Style="{StaticResource TextBlock}" Grid.Row="0" Grid.Column="1">1.3</TextBlock>
-                    <TextBlock Style="{StaticResource TextBlock}"  Grid.Row="1" Grid.Column="0" Grid.RowSpan="2">Author:</TextBlock>
-                    <TextBlock Style="{StaticResource TextBlock}" Grid.Row="1" Grid.Column="1">Andrew Sotnikov</TextBlock>
-                    <TextBlock Style="{StaticResource TextBlock}" Grid.Row="2" Grid.Column="0" Grid.RowSpan="2">E-mail:</TextBlock>
-                    <TextBlock Style="{StaticResource TextBlock}" Grid.Row="2" Grid.Column="1">andrew.sotnikov@zoho.com</TextBlock>
+                    <TextBlock Style="{StaticResource TextBlock}"  Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Width="47">version:</TextBlock>
+                    <TextBlock Style="{StaticResource TextBlock}" Grid.Row="0" Grid.Column="1" Width="18">1.4</TextBlock>
+                    <TextBlock Style="{StaticResource TextBlock}"  Grid.Row="1" Grid.Column="0" Grid.RowSpan="2" Width="46">Author:</TextBlock>
+                    <TextBlock Style="{StaticResource TextBlock}" Grid.Row="1" Grid.Column="1" Width="105">Andrii Sotnikov</TextBlock>
+                    <TextBlock Style="{StaticResource TextBlock}" Grid.Row="2" Grid.Column="0" Width="42">E-mail:</TextBlock>
+                    <TextBlock Style="{StaticResource TextBlock}" Grid.Row="2" Grid.Column="1" Width="174" Margin="0,0,0,44">andrew.sotnikov@zoho.com</TextBlock>
                 </Grid>
             </StackPanel>
         </StackPanel>
