--- a/TabsHolder/View/MainWindow.xaml
+++ b/TabsHolder/View/MainWindow.xaml
@@ -70,7 +70,7 @@
             <StackPanel Orientation="Vertical">
                 <Button Name="AddBtn" Style="{StaticResource Button}" Command="{Binding AddBtnClickCmd}" >Add</Button>
                 <Button Name="DeleteBtn" Style="{StaticResource Button}" Command="{Binding DeleteTabItemCmd}" >Delete</Button>
-                <Button Name="RenameBtn" Style="{StaticResource Button}" Command="{Binding RenameTabItemCmd}" >Rename</Button>
+                <Button Name="EditBtn" Style="{StaticResource Button}" Command="{Binding EditTabItemCmd}" >Edit</Button>
                 <Button Name="Open" Style="{StaticResource Button}" Margin="0,100,0,0" Command="{Binding OpenInFirefoxCmd}" >Open</Button>
             </StackPanel>
         </StackPanel>
