--- a/TabsHolder/View/RenameTabWindow.xaml
+++ b/TabsHolder/View/RenameTabWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TabsHolder"
         mc:Ignorable="d"
-        Title="Please add new tab" Height="200" Width="600"
+        Title="Please add new tab" Height="210" Width="600"
         Background="#272822"
         WindowStartupLocation="CenterScreen">
     <Window.Resources>
@@ -16,14 +16,14 @@
             <Setter Property="Button.Margin" Value="20,10,0,0" />
         </Style>
     </Window.Resources>
-    <StackPanel Orientation="Vertical">
-        <StackPanel Orientation="Vertical" Margin="20,10,20,0">
-            <TextBlock Margin="0,20,0,0" Foreground="#f8f8f2">Enter new name</TextBlock>
-            <!--..<TextBox x:Name="urlInput" Width="600" Margin="0,0,0,0" HorizontalAlignment="Left" Text="{Binding Url, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"> -->
-            <TextBox Width="600" HorizontalAlignment="Left" Text="{Binding TabItemName}"/>
-           
+    <StackPanel Orientation="Vertical" FocusManager.FocusedElement="{Binding ElementName=TabNameTextBox}">
+        <StackPanel Orientation="Vertical" Margin="20,0,20,0">
+            <TextBlock Margin="0,10,0,0" Foreground="#f8f8f2">Enter new name</TextBlock>
+            <TextBox Name="TabNameTextBox" Width="600" HorizontalAlignment="Left" Text="{Binding TabItemName}" Margin="0,0,0,5" KeyDown="TextBox_KeyDown"/>
+            <TextBlock  Margin="0,10,0,5" Foreground="#f8f8f2">Rating value</TextBlock>
+            <TextBox Width="50" HorizontalAlignment="Left" Text="{Binding RatingValue}" KeyDown="TextBox_KeyDown"/>
         </StackPanel>
-        <StackPanel Orientation="Horizontal" Margin="0,40,20,0" HorizontalAlignment="Right">
+        <StackPanel Orientation="Horizontal" Margin="412,30,20,30">
             <Button  Style="{StaticResource Button}" Command="{Binding OkBtnCmd}" >OK</Button>
             <Button  Style="{StaticResource Button}" Command="{Binding CancelBtnCmd}">Cancel</Button>
         </StackPanel>
